SERVER-64124 Limit instantiation of AccumulatorTopBottomN template